Change demo URL in CODECANYON_PRODUCT_DESCRIPTION.html
Updated demo URL in product description.

--- a/CODECANYON_PRODUCT_DESCRIPTION.html
+++ b/CODECANYON_PRODUCT_DESCRIPTION.html
@@ -6,7 +6,7 @@
 
 <h2>🎯 Live Demo</h2>
 
-<p><strong>Demo URL:</strong> <a href="https://your-demo-url.vercel.app" target="_blank">https://your-demo-url.vercel.app</a></p>
+<p><strong>Demo URL:</strong> <a href="https://community-complaint-issue-reporting.vercel.app" target="_blank">https://your-demo-url.vercel.app</a></p>
 
 <h3>Demo Credentials for Testing:</h3>
 
